RESOLVED FIXED 274227
Regression (278786@main): Two http/wpt/webauthn tests are failing
https://bugs.webkit.org/show_bug.cgi?id=274227
Summary Regression (278786@main): Two http/wpt/webauthn tests are failing
Sihui Liu
Reported 2024-05-15 13:35:37 PDT
...
Attachments
Sihui Liu
Comment 1 2024-05-15 13:35:55 PDT
Sihui Liu
Comment 2 2024-05-15 13:42:16 PDT
EWS
Comment 3 2024-05-15 15:15:17 PDT
Committed 278828@main (35f1c4d09dfd): <https://commits.webkit.org/278828@main> Reviewed commits have been landed. Closing PR #28614 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.