Regression (278786@main): Two http/wpt/webauthn tests are failing https://bugs.webkit.org/show_bug.cgi?id=274227 rdar://128137880

Reviewed by Chris Dumez.

Ensure the right token is used when splitting string.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/html/PermissionsPolicy.cpp:
(WebCore::readFeatureIdentifier):

Canonical link: https://commits.webkit.org/278828@main